importer: Give module objects a [Symbol.toStringTag]

Instead of defining a toString() function on module objects, give them a
[Symbol.toStringTag] property. This avoids overwriting a toString()
property that the module may have defined itself.

https://bugzilla.gnome.org/show_bug.cgi?id=781623