installed-tests/js/modules/foobar.js
@@ -2,3 +2,9 @@
 
 var foo = "This is foo";
 var bar = "This is bar";
+
+var toString = x => x;
+
+function testToString(x) {
+    return toString(x);
+}
